<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apuri.com.br.ureblockingme.WellcomeActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/txt_identification"
        android:id="@+id/lb_identification"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_user_name"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/txtUserName"
        android:layout_below="@+id/lb_identification"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email_address"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txtUserName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_license_plate"
        android:ems="10"
        android:id="@+id/txtLicensePlate"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_continue"
        android:enabled="false"
        android:id="@+id/btContinue"
        android:layout_below="@+id/txtLicensePlate"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
